# calcure

./: .gitignore  LICENSE  README.md  calcure  calcure.1  calcure.py  mincal  mincal.py  pyproject.toml  readme.md  setup.py  test_week_numbers.py
calcure/: __main__.py  calendars.py  colors.py  configuration.py  controls.py  data.py  dialogues.py  errors.py  helpers.py  importers.py  input.py  keybindings.py  loaders.py  moon.py  repository.py  savers.py  screen.py  test.py  test_async.py  test_decoration.py  test_log.py  translation_en.py  translation_fr.py  translation_it.py  weather.py
calcure/translations/: br.py  de.py  en.py  es.py  fr.py  hu.py  it.py  ru.py  si.py  sk.py  tr.py  tw.py  zh.py
src/: calcure.py  calendars.py  config.py  configuration.py  controls.py  data.py  dialogues.py  helpers.py  repository.py  screen.py  translation_en.py  weather.py
